bugfix card overflow

--- a/src/app/book-detail/book-detail-footer/book-detail-footer.component.scss
+++ b/src/app/book-detail/book-detail-footer/book-detail-footer.component.scss
@@ -1,14 +1,7 @@
 .row{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 20px;
-    
     align-items: center;
 }
 
