--- a/src/app/book-detail/book-detail.component.scss
+++ b/src/app/book-detail/book-detail.component.scss
@@ -1,7 +1,7 @@
 .card-wrapper {
     width: 350px;
     height: 100%;
-    
+
     position: absolute;
     display: flex;
     top: 0;
@@ -10,19 +10,60 @@
 
 .card {
     position: relative;
+    overflow: hidden;
 
     margin: 10px;
-    padding: 20px;
 
-    border-radius: 8px;
     width: 100%;
-
+    border-radius: 8px;
     background-color: #acc1d7;
+
+    padding-left: 5px;
 }
 
-.close-icon-wrapper{
+.card_ {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
+    overflow-y: scroll;
+    padding: 0 20px;
+    height: 100%;
+    max-height: 100%;
 }
+
+.card_::-webkit-scrollbar {
+    width: 4px;
+}
+
+/* Track */
+.card_::-webkit-scrollbar-track {
+    border-radius: 5px;
+    // background-color: #d9ebff;
+}
+
+/* Handle */
+.card_::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+.card_::-webkit-scrollbar-thumb:hover {
+    background: #444;
+}
+
+.content {
+    padding-top: 20px;
+    padding-bottom: 15px;
+}
+
+.footer {
+    padding-bottom: 20px;
+}
+
+.close-icon-wrapper {}
+
 .close-icon {
     position: absolute;
 
@@ -30,16 +71,16 @@
     top: 5px;
 }
 
-.title-wrapper{
+.title-wrapper {
     margin-top: 20px;
 }
 
-.title{
+.title {
     font-size: 26px;
 
     font-weight: 700;
 }
 
-.content{
+.content {
     margin-top: 20px;
 }
